= Release notes v.8.7

== Table of Contents

* Fixed sonar alerts

== Fixed sonar alerts

Sonar alerts were fixed for classes:

- FailedCertValidationException
- CertificateExtractorUtil
- URLDecodingUtil
- RolesOfPSP
- TppRoles
- URLDecodingUtilTest