@@ -126,7 +126,9 @@ public class AccountDetailsService {
                                                           String accountId, boolean withBalance) {
         AccountAccess access = aisConsent.getAspspAccountAccesses();
         SpiAccountReference requestedAccountReference = aisConsent.isGlobalConsent() ?
-                                                            new SpiAccountReference(accountId, null, null, null, null, null, null, null) :
+                                                            SpiAccountReference.builder()
+                                                                .resourceId(accountId)
+                                                                .build() :
                                                             accountHelperService.findAccountReference(access.getAccounts(), accountId);
 
         return accountSpi.requestAccountDetailForAccount(accountHelperService.getSpiContextData(),
