@@ -914,7 +914,7 @@ class TransactionServiceTest {
     }
 
     private static SpiAccountReference buildSpiAccountReferenceGlobal() {
-        return new SpiAccountReference(ACCOUNT_ID, null, null, null, null, null, null, null);
+        return SpiAccountReference.builder().resourceId(ACCOUNT_ID).build();
     }
 
     private static AccountReference buildXs2aAccountReference() {
