@@ -14,3 +14,5 @@ Sonar alerts were fixed for classes:
 - RolesOfPSP
 - TppRoles
 - URLDecodingUtilTest
+- SpiAccountReference
+- SpiPaymentResponse
